Add initial grpc skeleton
Signed-off-by: Ikey Doherty <ikey@serpentos.com>

--- a/zenith/Cargo.toml
+++ b/zenith/Cargo.toml
@@ -3,4 +3,10 @@ name = "zenith"
 version = "0.1.0"
 edition = "2021"
 
+[build-dependencies]
+tonic-build.workspace = true
+
 [dependencies]
+prost.workspace = true
+tonic.workspace = true
+tokio = { workspace = true, features = ["full"] }
