--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ resolver = "2"
 members = [
     "zenith",
 ]
+
+[workspace.dependencies]
+prost = "0.13"
+tonic-build = "0.12.3"
+tonic = "0.12.3"
+tokio = "1.43.0"
