--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ members = [
 
 [workspace.dependencies]
 prost = "0.13"
+tracing = "0.1.41"
+tracing-futures = "0.2.5"
+tracing-subscriber = "0.3.19"
 tonic-build = "0.12.3"
 tonic = "0.12.3"
 tokio = "1.43.0"
